Replace invitation modal's implementation