@@ -2,6 +2,7 @@ package de.vinado.wicket.participate.ui.event;
 
 import de.agilecoders.wicket.core.markup.html.bootstrap.button.BootstrapAjaxLink;
 import de.agilecoders.wicket.core.markup.html.bootstrap.button.Buttons;
+import de.agilecoders.wicket.core.markup.html.bootstrap.dialog.Modal.Size;
 import de.agilecoders.wicket.extensions.markup.html.bootstrap.form.datetime.DatetimePicker;
 import de.agilecoders.wicket.extensions.markup.html.bootstrap.form.datetime.DatetimePickerConfig;
 import de.agilecoders.wicket.extensions.markup.html.bootstrap.form.select.BootstrapSelect;
@@ -9,12 +10,12 @@ import de.vinado.wicket.bt4.datetimepicker.DatetimePickerIconConfig;
 import de.vinado.wicket.bt4.datetimepicker.DatetimePickerResetIntent;
 import de.vinado.wicket.bt4.datetimepicker.DatetimePickerResettingBehavior;
 import de.vinado.wicket.bt4.form.decorator.BootstrapHorizontalFormDecorator;
+import de.vinado.wicket.bt4.modal.FormModal;
+import de.vinado.wicket.bt4.modal.ModalAnchor;
 import de.vinado.wicket.common.UpdateOnEventBehavior;
 import de.vinado.wicket.form.AutosizeBehavior;
 import de.vinado.wicket.participate.ParticipateSession;
 import de.vinado.wicket.participate.common.ParticipateUtils;
-import de.vinado.wicket.participate.components.modals.BootstrapModal;
-import de.vinado.wicket.participate.components.modals.BootstrapModalPanel;
 import de.vinado.wicket.participate.components.snackbar.Snackbar;
 import de.vinado.wicket.participate.configuration.ApplicationProperties;
 import de.vinado.wicket.participate.model.Event;
@@ -37,13 +38,13 @@ import org.apache.wicket.model.ResourceModel;
 import org.apache.wicket.spring.injection.annot.SpringBean;
 
 import java.net.URL;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
 /**
  * @author Vincent Nadoll (vincent.nadoll@gmail.com)
  */
-public abstract class EditInvitationPanel extends BootstrapModalPanel<ParticipantDTO> {
+public abstract class EditInvitationPanel extends FormModal<ParticipantDTO> {
 
     @SuppressWarnings("unused")
     @SpringBean
@@ -52,11 +53,18 @@ public abstract class EditInvitationPanel extends BootstrapModalPanel<Participan
     @SpringBean
     private ApplicationProperties applicationProperties;
 
-    public EditInvitationPanel(final BootstrapModal modal, final IModel<ParticipantDTO> model) {
-        super(modal, new ResourceModel("invitation.edit", "Edit Invitation"), model);
-        setModalSize(ModalSize.Medium);
+    public EditInvitationPanel(ModalAnchor modal, IModel<ParticipantDTO> model) {
+        super(modal, model);
 
-        Event event = model.getObject().getEvent();
+        size(Size.Large);
+        title(new ResourceModel("invitation.edit", "Edit Invitation"));
+    }
+
+    @Override
+    protected void onInitialize() {
+        super.onInitialize();
+
+        Event event = getModelObject().getEvent();
         final DatetimePickerConfig fromConfig = new DatetimePickerConfig();
         fromConfig.useLocale("de");
         fromConfig.useCurrent(false);
@@ -76,24 +84,24 @@ public abstract class EditInvitationPanel extends BootstrapModalPanel<Participan
         toConfig.with(new DatetimePickerIconConfig());
 
         final BootstrapSelect<InvitationStatus> invitationStatusBs = new BootstrapSelect<>("invitationStatus",
-            Collections.unmodifiableList(Arrays.asList(InvitationStatus.values())), new EnumChoiceRenderer<>());
+            List.of(InvitationStatus.values()), new EnumChoiceRenderer<>());
         invitationStatusBs.add(new AjaxFormComponentUpdatingBehavior("hidden.bs.select") {
             @Override
             protected void onUpdate(final AjaxRequestTarget target) {
-                model.getObject().setInvitationStatus((InvitationStatus) invitationStatusBs.getConvertedInput());
-                target.add(inner);
+                getModelObject().setInvitationStatus(invitationStatusBs.getConvertedInput());
+                target.add(form);
             }
         });
         invitationStatusBs.setLabel(Model.of(""));
         invitationStatusBs.add(BootstrapHorizontalFormDecorator.decorate());
-        inner.add(invitationStatusBs);
+        form.add(invitationStatusBs);
 
         final DatetimePicker toDtP = new DatetimePicker("toDate", toConfig);
 
         final DatetimePicker fromDtP = new DatetimePicker("fromDate", fromConfig);
         fromDtP.add(new DatetimePickerResettingBehavior(toConfig::withMinDate));
         fromDtP.add(BootstrapHorizontalFormDecorator.decorate(new ResourceModel("from", "From")));
-        inner.add(fromDtP);
+        form.add(fromDtP);
 
         toDtP.setOutputMarkupId(true);
         toDtP.add(BootstrapHorizontalFormDecorator.decorate(new ResourceModel("till", "Till")));
@@ -103,13 +111,13 @@ public abstract class EditInvitationPanel extends BootstrapModalPanel<Participan
             protected void onUpdate(final AjaxRequestTarget target) {
             }
         });
-        inner.add(toDtP);
+        form.add(toDtP);
 
         final CheckBox cateringCb = new CheckBox("catering") {
             @Override
             protected void onConfigure() {
                 super.onConfigure();
-                setEnabled(InvitationStatus.ACCEPTED.equals(model.getObject().getInvitationStatus()));
+                setEnabled(InvitationStatus.ACCEPTED.equals(EditInvitationPanel.this.getModelObject().getInvitationStatus()));
             }
         };
         cateringCb.add(BootstrapHorizontalFormDecorator.decorate());
@@ -119,13 +127,13 @@ public abstract class EditInvitationPanel extends BootstrapModalPanel<Participan
 
             }
         });
-        inner.add(cateringCb);
+        form.add(cateringCb);
 
         final CheckBox accommodationCb = new CheckBox("accommodation") {
             @Override
             protected void onConfigure() {
                 super.onConfigure();
-                setEnabled(InvitationStatus.ACCEPTED.equals(model.getObject().getInvitationStatus()));
+                setEnabled(InvitationStatus.ACCEPTED.equals(EditInvitationPanel.this.getModelObject().getInvitationStatus()));
             }
         };
         accommodationCb.add(BootstrapHorizontalFormDecorator.decorate());
@@ -135,7 +143,7 @@ public abstract class EditInvitationPanel extends BootstrapModalPanel<Participan
 
             }
         });
-        inner.add(accommodationCb);
+        form.add(accommodationCb);
 
         NumberTextField<Integer> carSeatCountTf = new NumberTextField<Integer>("carSeatCount") {
             @Override
@@ -150,7 +158,7 @@ public abstract class EditInvitationPanel extends BootstrapModalPanel<Participan
         carSeatCountTf.setOutputMarkupId(true);
         carSeatCountTf.setMinimum(0);
         carSeatCountTf.setMaximum(127); // 1 Byte maximum signed integer
-        inner.add(carSeatCountTf);
+        form.add(carSeatCountTf);
 
         AjaxCheckBox carCb = new AjaxCheckBox("car") {
             @Override
@@ -158,13 +166,13 @@ public abstract class EditInvitationPanel extends BootstrapModalPanel<Participan
                 target.add(carSeatCountTf);
             }
         };
-        inner.add(carCb);
+        form.add(carCb);
 
         final TextArea commentTa = new TextArea<>("comment") {
             @Override
             protected void onConfigure() {
                 super.onConfigure();
-                setEnabled(InvitationStatus.ACCEPTED.equals(model.getObject().getInvitationStatus()));
+                setEnabled(InvitationStatus.ACCEPTED.equals(EditInvitationPanel.this.getModelObject().getInvitationStatus()));
             }
         };
         commentTa.add(new AutosizeBehavior());
@@ -175,17 +183,18 @@ public abstract class EditInvitationPanel extends BootstrapModalPanel<Participan
 
             }
         });
-        inner.add(commentTa);
+        form.add(commentTa);
 
         final BootstrapAjaxLink<ParticipantDTO> inviteSingerBtn = new BootstrapAjaxLink<ParticipantDTO>(
-            "inviteSingerBtn", model, Buttons.Type.Default, !InvitationStatus.UNINVITED.equals(model.getObject().getInvitationStatus())
+            "inviteSingerBtn", getModel(), Buttons.Type.Default, !InvitationStatus.UNINVITED.equals(getModelObject().getInvitationStatus())
             ? new ResourceModel("email.send.reminder", "Send Reminder")
             : new ResourceModel("email.send.invitation", "Send Invitation")) {
             @Override
             public void onClick(final AjaxRequestTarget target) {
-                eventService.inviteParticipant(model.getObject().getParticipant(), ParticipateSession.get().getUser());
-                modal.close(target);
-                if (!InvitationStatus.UNINVITED.equals(model.getObject().getInvitationStatus())) {
+                eventService.inviteParticipant(EditInvitationPanel.this.getModelObject().getParticipant(), ParticipateSession.get().getUser());
+                Optional.ofNullable(EditInvitationPanel.this.findParent(ModalAnchor.class))
+                    .ifPresent(anchor -> anchor.close(target));
+                if (!InvitationStatus.UNINVITED.equals(EditInvitationPanel.this.getModelObject().getInvitationStatus())) {
                     Snackbar.show(target, new ResourceModel("email.send.reminder.success", "A reminder has been sent"));
                 } else {
                     Snackbar.show(target, new ResourceModel("email.send.invitation.success", "An invitation has been sent"));
@@ -193,14 +202,14 @@ public abstract class EditInvitationPanel extends BootstrapModalPanel<Participan
             }
         };
         inviteSingerBtn.setSize(Buttons.Size.Small);
-        inner.add(inviteSingerBtn);
+        form.add(inviteSingerBtn);
 
         URL href = ParticipateUtils.generateInvitationLink(
             applicationProperties.getBaseUrl(),
-            model.getObject().getToken());
+            getModelObject().getToken());
         Label link = new Label("token", href);
         link.add(AttributeModifier.append("href", href));
         link.add(AttributeModifier.append("target", "_blank"));
-        inner.add(link);
+        form.add(link);
     }
 }
